# pm-plugin

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  __init__.py  brain.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  requirements-screenshots.txt  subagents.py  view.py
.github/workflows/: ci.yml
skills/ab-test-analysis/: SKILL.md
skills/analyze-feature-requests/: SKILL.md
skills/ansoff-matrix/: SKILL.md
skills/beachhead-segment/: SKILL.md
skills/brainstorm-ideas/: SKILL.md
skills/brainstorm-okrs/: SKILL.md
skills/business-model/: SKILL.md
skills/competitive-battlecard/: SKILL.md
skills/competitor-analysis/: SKILL.md
skills/create-prd/: SKILL.md
skills/customer-journey-map/: SKILL.md
skills/design-experiments/: SKILL.md
skills/growth-loops/: SKILL.md
skills/gtm-motions/: SKILL.md
skills/gtm-strategy/: SKILL.md
skills/ideal-customer-profile/: SKILL.md
skills/identify-assumptions/: SKILL.md
skills/interview-script/: SKILL.md
skills/lean-canvas/: SKILL.md
skills/market-segments/: SKILL.md
skills/market-sizing/: SKILL.md
skills/marketing-ideas/: SKILL.md
skills/metrics-dashboard/: SKILL.md
skills/monetization-strategy/: SKILL.md
skills/north-star-metric/: SKILL.md
skills/opportunity-solution-tree/: SKILL.md
skills/outcome-roadmap/: SKILL.md
skills/pestle-analysis/: SKILL.md
skills/porters-five-forces/: SKILL.md
skills/positioning-ideas/: SKILL.md
skills/pre-mortem/: SKILL.md
skills/pricing-strategy/: SKILL.md
skills/retro/: SKILL.md
tests/: conftest.py  test_pm.py  test_screenshots.py
(+18 files in other folders)
