[project]
name = "pm-plugin"
version = "0.1.0"
description = "Product Manager plugin for protoAgent — PM skills, a markdown-native PM Brain, specialist subagents, and a brain dashboard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
markers = [
  "screenshot: browser-driven screenshot/render tests (needs Playwright + chromium; run via `pytest -m screenshot`)",
]
